force-app/main/default/objects/numm__SettlMethod__c/numm__SettlMethod__c.object-meta.xml
<CustomObject>
    <description>Objet des modes de règlements</description>
    <label>Mode de règlement</label>
    <nameField>
        <label>Mode de règlement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modes de règlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>