force-app/main/default/objects/numm__SettlMethod__c/fields/numm__Avis_de_paiement__c.field-meta.xml
<CustomField>
    <fullName>numm__Avis_de_paiement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avis de paiement</label>
    <type>Checkbox</type>
</CustomField>