force-app/main/default/objects/numm__SettlMethod__c/fields/numm__ExtSettlMethodCode__c.field-meta.xml
<CustomField>
    <fullName>numm__ExtSettlMethodCode__c</fullName>
    <description>Code du mode de règlement</description>
    <externalId>true</externalId>
    <inlineHelpText>Saisir un code de 10 caractères pour définir le mode règlement externe</inlineHelpText>
    <label>Mode de règlement Externe</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>