force-app/main/default/objects/numm__SettlMethod__c/fields/numm__ModesReglements__c.field-meta.xml
<CustomField>
    <fullName>numm__ModesReglements__c</fullName>
    <inlineHelpText>Le type de règlement &quot;Prélévement&quot; ne sera pas pris en compte dans le modules des relances</inlineHelpText>
    <label>Type de règlement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Chèque</fullName>
            </value>
            <value>
                <fullName>Virement</fullName>
            </value>
            <value>
                <fullName>Traite</fullName>
            </value>
            <value>
                <fullName>Carte Bancaire</fullName>
            </value>
            <value>
                <fullName>Prélévement</fullName>
            </value>
            <value>
                <fullName>LCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>