force-app/main/default/objects/numm__SettlMethod__c/listViews/numm__All.listView-meta.xml
<ListView>
    <fullName>numm__All</fullName>
    <columns>NAME</columns>
    <columns>numm__ModesReglements__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>